unpackaged/objects/TMFC_TeamForce_Test_Script__c.object
<CustomObject>
  <fields>
    <fullName>TMFC_Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>TMFC_Persona__c</fullName>
    <label>Persona</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_Prerequisite__c</fullName>
    <label>Prerequisite</label>
    <length>250</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_TeamForce_User_Story__c</fullName>
    <label>TeamForce User Story</label>
    <referenceTo>TMFC_TeamForce_User_Story__c</referenceTo>
    <relationshipLabel>TeamForce Test Scripts</relationshipLabel>
    <relationshipName>TeamForce_Test_Scripts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>TMFC_Test_Scenarios__c</fullName>
    <label>Test Scenarios</label>
    <length>250</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_Test_Script_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_Test_Scripts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_Test_Script_Status__c</fullName>
    <label>Test Script Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New</fullName>
          <default>true</default>
          <label>New</label>
        </value>
        <value>
          <fullName>In Draft</fullName>
        </value>
        <value>
          <fullName>Ready for Approval</fullName>
        </value>
        <value>
          <fullName>Ready for Use</fullName>
        </value>
        <value>
          <fullName>In Testing</fullName>
        </value>
        <value>
          <fullName>Complete</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TMFC_Test_Steps__c</fullName>
    <label>Test Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <label>TeamForce Test Script</label>
  <nameField>
    <displayFormat>TFTS-{000000000}</displayFormat>
    <label>TeamForce Test Script ID</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>TeamForce Test Scripts</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>